--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -45,7 +45,7 @@
         {% include '/partials/header_mobile.html.twig' %}
         <div class="kleanity-body-outer-wrapper ">
             <div class="kleanity-body-wrapper clearfix  kleanity-with-transparent-header kleanity-with-frame">
-                <div class="kleanity-header-background-transparent">
+                <div class="kleanity-header-background-transparent" style="z-index: 9999">
                     {% include '/partials/header.html.twig' %}
                 </div>
                 {% block body %}{% endblock %}
