--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -14,11 +14,14 @@
 <div class="kleanity-page-wrapper" id="kleanity-page-wrapper">
     
     <div class="gdlr-core-page-builder-body">
-        <div class="gdlr-core-pbf-wrapper " style="padding: 210px 0px 150px 0px; color: #fff;">
-            <div class="gdlr-core-pbf-background-wrap my-bg-black" >
+        <div class="gdlr-core-pbf-wrapper position-relative " style="padding: 210px 0px 150px 0px; color: #fff;">
+            <div class="gdlr-core-pbf-background-wrap my-bg-black" style="z-index: 1; opacity:0.8" >
                 {# <div class="gdlr-core-pbf-background gdlr-core-parallax gdlr-core-js" style="background-image: url(upload/hp3-section-2.jpg);background-repeat: no-repeat;background-position: center;" data-parallax-speed="0.3"></div> #}
             </div>
-            <div class="gdlr-core-pbf-wrapper-content gdlr-core-js ">
+            <div class=" my-bg-elephant" style="position:absolute;width:100%; height:100%; top:0px ;left:0px" >
+                {# <div class="gdlr-core-pbf-background gdlr-core-parallax gdlr-core-js" style="background-image: url(upload/hp3-section-2.jpg);background-repeat: no-repeat;background-position: center;" data-parallax-speed="0.3"></div> #}
+            </div>
+            <div class="gdlr-core-pbf-wrapper-content gdlr-core-js " style="z-index: 2">
                 <div class="gdlr-core-pbf-wrapper-container clearfix gdlr-core-container">
                     <div class="gdlr-core-pbf-column gdlr-core-column-30 gdlr-core-column-first">
                         <div class="gdlr-core-pbf-column-content-margin gdlr-core-js ">
