fix section 5 (more info) + fix bug js + install popper

--- a/public/assets/utils/css/main.css
+++ b/public/assets/utils/css/main.css
@@ -54,12 +54,17 @@ footer .kleanity-copyright-wrapper .kleanity-copyright-text a{
     color: white ;
 
 }
-
+.popover {
+    max-width:500px
+}
 @media only screen and (max-width: 600px) {
  #coffret-img {
      height: 61vh !important;
  }
     .p-fs-mobile {
         font-size:22px !important;
+    }
+    .popover {
+        max-width:350px
     }
 }
