--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -64,8 +64,8 @@
             <script type='text/javascript' src="{{asset('assets/kleanity/js/isotopefilter.js')}}"></script>    
 
             <script type='text/javascript' src="{{asset('assets/kleanity/js/jquery/ui/effect.min.js')}}"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
             <script type='text/javascript' src="{{asset('assets/utils/bootstrap/js/bootstrap.min.js')}}"></script>
-
             <script type='text/javascript' src="{{asset('assets/kleanity/js/script.js')}}"></script>
             <script type='text/javascript' src="{{asset('assets/kleanity/js/combine.js')}}"></script>
 
