--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -336,19 +336,66 @@
                         <div class="gdlr-core-gallery-item gdlr-core-item-pdb clearfix  gdlr-core-gallery-item-style-grid">
                             <div class="gdlr-core-gallery-item-holder gdlr-core-js-2 clearfix" data-layout="fitrows">
                                 <div class="gdlr-core-item-list gdlr-core-gallery-column  gdlr-core-column-12 gdlr-core-column-first gdlr-core-item-pdlr gdlr-core-item-mgb">
-                                    <div class="gdlr-core-gallery-list gdlr-core-media-image"><img src="{{asset('assets/utils/logo/Calque 4.png')}}" alt="" width="138" height="49" /></div>
+                                    <div class="gdlr-core-gallery-list gdlr-core-media-image">
+                                        <img src="{{asset('assets/utils/logo/Calque 4.png')}}"
+                                             role="button"
+                                             data-container="body"
+                                             data-toggle="popover"
+                                             tabindex="0"
+                                             data-trigger="focus"
+                                             data-placement="top"
+                                             data-content="La certification Cosmos Organic permet la commercialisation de produits cosmétiques biologiques ou naturels. Elle garantit un ensemble de procédés et de production respectueux de l’environnement et de la santé humaine, ainsi qu’un développement du concept de chimie verte. Ainsi, les produits créés ne contiennent pas d’ingrédients pétrochimiques, d’OGM et disposent d’un emballage recyclable. "
+                                             alt="" width="138" height="49" />
+                                        </button>
+                                    </div>
                                 </div>
                                 <div class="gdlr-core-item-list gdlr-core-gallery-column  gdlr-core-column-12 gdlr-core-item-pdlr gdlr-core-item-mgb">
-                                    <div class="gdlr-core-gallery-list gdlr-core-media-image"><img src="{{asset('assets/utils/logo/Calque 5.png')}}" alt="" width="141" height="45" /></div>
+                                    <div class="gdlr-core-gallery-list gdlr-core-media-image">
+                                        <img src="{{asset('assets/utils/logo/Calque 5.png')}}"
+                                             role="button"
+                                             data-container="body"
+                                             data-toggle="popover"
+                                             tabindex="0"
+                                             data-trigger="focus"
+                                             data-placement="top"
+                                             data-content="la certification Wildlife Friendly est reconnue mondialement et est attribuée au développement et à la commercialisation de produits qui préservent les espèces sauvages menacées tout en contribuant à la vitalité économique des communautés rurales. Il peut regrouper les défenseurs de la nature, des entreprises, des artisans, des producteurs et des récoltants. Le label certifié Wildlife Friendly™ protège rigoureusement les espèces clés qui constituent une priorité en matière de conservation. Les entreprises Certified Wildlife Friendly™ protègent un large éventail d'espèces sauvages dans de multiples secteurs à travers le monde. Le programme comprend des critères distincts pour les produits certifiés Wildlife Friendly™ ainsi que pour le tourisme certifié Wildlife Friendly™."
+                                             alt="" width="141" height="45" /></div>
                                 </div>
                                 <div class="gdlr-core-item-list gdlr-core-gallery-column  gdlr-core-column-12 gdlr-core-item-pdlr gdlr-core-item-mgb">
-                                    <div class="gdlr-core-gallery-list gdlr-core-media-image"><img src="{{asset('assets/utils/logo/Calque 6.png')}}" alt="" width="132" height="46" /></div>
+                                    <div class="gdlr-core-gallery-list gdlr-core-media-image"
+                                    ><img src="{{asset('assets/utils/logo/Calque 6.png')}}"
+                                          role="button"
+                                          data-container="body"
+                                          data-toggle="popover"
+                                          tabindex="0"
+                                          data-trigger="focus"
+                                          data-placement="top"
+                                          data-content="la certification Palm Oil Free est délivrée pour approuver la commercialisation de produits sans huile de palme. "
+                                          alt="" width="132" height="46" /></div>
                                 </div>
                                 <div class="gdlr-core-item-list gdlr-core-gallery-column  gdlr-core-column-12 gdlr-core-item-pdlr gdlr-core-item-mgb">
-                                    <div class="gdlr-core-gallery-list gdlr-core-media-image"><img src="{{asset('assets/utils/logo/Calque 7.png')}}" alt="" width="148" height="44" /></div>
+                                    <div class="gdlr-core-gallery-list gdlr-core-media-image">
+                                        <img src="{{asset('assets/utils/logo/Calque 7.png')}}"
+                                             role="button"
+                                             data-container="body"
+                                             data-toggle="popover"
+                                             tabindex="0"
+                                             data-trigger="focus"
+                                             data-placement="top"
+                                             data-content="1% for the Planet a été fondé pour empêcher l'écoblanchiment, certifier les dons de bonne réputation et assurer la responsabilité. La certification 1% for the Planet est décernée aux entreprises et aux particuliers qui respectent cet engagement de haut niveau - donner 1% de leurs ventes annuelles ou de leur salaire à des causes environnementales"
+                                             alt="" width="148" height="44" /></div>
                                 </div>
                                 <div class="gdlr-core-item-list gdlr-core-gallery-column  gdlr-core-column-12 gdlr-core-item-pdlr gdlr-core-item-mgb">
-                                    <div class="gdlr-core-gallery-list gdlr-core-media-image"><img src="{{asset('assets/utils/logo/Calque 8.png')}}" alt="" width="151" height="33" /></div>
+                                    <div class="gdlr-core-gallery-list gdlr-core-media-image">
+                                        <img src="{{asset('assets/utils/logo/Calque 8.png')}}"
+                                             role="button"
+                                             data-container="body"
+                                             data-toggle="popover"
+                                             tabindex="0"
+                                             data-trigger="focus"
+                                             data-placement="top"
+                                             data-content='La première chose que vous devez savoir est que les termes "svégétalien" (vegan) et "sans cruauté" (cruelty free) ne sont pas identiques. Vegan signifie qu'un produit ne contient aucun ingrédient d'origine animale. Cruelty-free signifie que le produit n'a pas été testé sur des animaux pendant son développement. Si, techniquement, cela signifie qu'un produit végétalien peut avoir été testé sur des animaux et vice versa, dans la pratique, la plupart des certifications végétaliennes exigent également que les produits soient sans cruauté, et de nombreux produits étiquetés "cruelty-free" sont également végétaliens, ce qui est le cas pour Elephas.'
+                                             alt="" width="151" height="33" /></div>
                                 </div>
                             </div>
                         </div>
