--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -362,6 +362,19 @@
                                              alt="" width="141" height="45" /></div>
                                 </div>
                                 <div class="gdlr-core-item-list gdlr-core-gallery-column  gdlr-core-column-12 gdlr-core-item-pdlr gdlr-core-item-mgb">
+                                    <div class="gdlr-core-gallery-list gdlr-core-media-image">
+                                        <img src="{{asset('assets/utils/logo/1ftp_Primary_Vertical_navy-01.webp')}}"
+                                             role="button"
+                                             data-container="body"
+                                             data-toggle="popover"
+                                             tabindex="0"
+                                             data-trigger="focus"
+                                             data-placement="top"
+                                             data-content="1% for the Planet a été fondé pour empêcher l'écoblanchiment, certifier les dons de bonne réputation et assurer la responsabilité. La certification 1% for the Planet est décernée aux entreprises et aux particuliers qui respectent cet engagement de haut niveau - donner 1% de leurs ventes annuelles ou de leur salaire à des causes environnementales."
+                                             alt="" width="141" height="45" /></div>
+                                </div>
+                                
+                                <div class="gdlr-core-item-list gdlr-core-gallery-column  gdlr-core-column-12 gdlr-core-item-pdlr gdlr-core-item-mgb">
                                     <div class="gdlr-core-gallery-list gdlr-core-media-image"
                                     ><img src="{{asset('assets/utils/logo/Calque 6.png')}}"
                                           role="button"
@@ -382,7 +395,7 @@
                                              tabindex="0"
                                              data-trigger="focus"
                                              data-placement="top"
-                                             data-content="1% for the Planet a été fondé pour empêcher l'écoblanchiment, certifier les dons de bonne réputation et assurer la responsabilité. La certification 1% for the Planet est décernée aux entreprises et aux particuliers qui respectent cet engagement de haut niveau - donner 1% de leurs ventes annuelles ou de leur salaire à des causes environnementales"
+                                             data-content="Conscious Fashion and Lifestyle Network est une plateforme en ligne hébergée par les Nations Unies (ONU) pour les acteurs du secteur, les médias, les gouvernements et les entités du système des Nations Unies. Le réseau met en avant et permet des collaborations qui accélèrent la mise en œuvre des objectifs de développement durable. Compte tenu de l'impact considérable du secteur de la mode et du style de vie sur les sociétés et l'environnement, son principal objectif est de mobiliser l'expertise, l'innovation, la technologie et les ressources en vue d'une reprise durable et inclusive du COVID-19, avec les objectifs de développement durable comme cadre directeur."
                                              alt="" width="148" height="44" /></div>
                                 </div>
                                 <div class="gdlr-core-item-list gdlr-core-gallery-column  gdlr-core-column-12 gdlr-core-item-pdlr gdlr-core-item-mgb">
@@ -394,7 +407,7 @@
                                              tabindex="0"
                                              data-trigger="focus"
                                              data-placement="top"
-                                             data-content='La première chose que vous devez savoir est que les termes "svégétalien" (vegan) et "sans cruauté" (cruelty free) ne sont pas identiques. Vegan signifie qu'un produit ne contient aucun ingrédient d'origine animale. Cruelty-free signifie que le produit n'a pas été testé sur des animaux pendant son développement. Si, techniquement, cela signifie qu'un produit végétalien peut avoir été testé sur des animaux et vice versa, dans la pratique, la plupart des certifications végétaliennes exigent également que les produits soient sans cruauté, et de nombreux produits étiquetés "cruelty-free" sont également végétaliens, ce qui est le cas pour Elephas.'
+                                             data-content='La première chose que vous devez savoir est que les termes "végétalien" (vegan) et "sans cruauté" (cruelty free) ne sont pas identiques. Vegan signifie qu&rsquo;un produit ne contient aucun ingrédient d&rsquo;origine animale. Cruelty-free signifie que le produit n&rsquo;a pas été testé sur des animaux pendant son développement. Si, techniquement, cela signifie qu&rsquo;un produit végétalien peut avoir été testé sur des animaux et vice versa, dans la pratique, la plupart des certifications végétaliennes exigent également que les produits soient sans cruauté, et de nombreux produits étiquetés "cruelty-free" sont également végétaliens, ce qui est le cas pour Elephas.'
                                              alt="" width="151" height="33" /></div>
                                 </div>
                             </div>
