--- a/templates/home/checkout.html.twig
+++ b/templates/home/checkout.html.twig
@@ -39,7 +39,7 @@
                                 <div class="gdlr-core-pbf-element">
                                     <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-left-align gdlr-core-title-item-caption-bottom gdlr-core-item-pdlr" style="padding-bottom: 15px;">
                                         <div class="gdlr-core-title-item-title-wrap ">
-                                            <h3 class="gdlr-core-title-item-title gdlr-core-skin-title my-font-regular" style="font-size: 32px;letter-spacing: 0px;text-transform: none;">Détails de facturation <span class="gdlr-core-title-item-title-divider gdlr-core-skin-divider"></span></h3>
+                                            <h3 class="gdlr-core-title-item-title gdlr-core-skin-title my-font-regular" style="font-size: 32px;letter-spacing: 0px;text-transform: none;">Vos informations <span class="gdlr-core-title-item-title-divider gdlr-core-skin-divider"></span></h3>
                                         </div>
                                     </div>
                                 </div>
@@ -161,7 +161,7 @@
                                 <div class="gdlr-core-pbf-element">
                                     <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-left-align gdlr-core-title-item-caption-bottom gdlr-core-item-pdlr" style="padding-bottom: 15px;">
                                         <div class="gdlr-core-title-item-title-wrap ">
-                                            <h3 class="gdlr-core-title-item-title gdlr-core-skin-title my-font-regular" style="font-size: 28px;letter-spacing: 0px;text-transform: none;">Détails sur la commande<span class="gdlr-core-title-item-title-divider gdlr-core-skin-divider"></span></h3>
+                                            <h3 class="gdlr-core-title-item-title gdlr-core-skin-title my-font-regular" style="font-size: 28px;letter-spacing: 0px;text-transform: none;">Votre commande<span class="gdlr-core-title-item-title-divider gdlr-core-skin-divider"></span></h3>
                                         </div>
                                     </div>
                                 </div>
