--- a/templates/home/checkout.html.twig
+++ b/templates/home/checkout.html.twig
@@ -229,7 +229,7 @@
                                             <div class="quform-elements gdlr-core-input-wrap gdlr-core-large gdlr-core-full-width gdlr-core-with-column gdlr-core-no-border">
                                                 
                                                 <div class="screen-reader-response"></div>
-                                                <table class="table  my-font-regular">
+                                                <table class="table  my-font-regular" style="white-space: nowrap;">
                                                     <thead>
                                                         <tr>
                                                         <th >Produit</th>
