--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -14,7 +14,7 @@
 <div class="kleanity-page-wrapper" id="kleanity-page-wrapper">
     
     <div class="gdlr-core-page-builder-body">
-        <div class="gdlr-core-pbf-wrapper position-relative " style="padding: 210px 0px 150px 0px; color: #fff;">
+        <div class="gdlr-core-pbf-wrapper position-relative">
             <div class="gdlr-core-pbf-background-wrap my-bg-black" style="z-index: 1; opacity:0.8" >
                 {# <div class="gdlr-core-pbf-background gdlr-core-parallax gdlr-core-js" style="background-image: url(upload/hp3-section-2.jpg);background-repeat: no-repeat;background-position: center;" data-parallax-speed="0.3"></div> #}
             </div>
