--- a/public/assets/css/pages/home.css
+++ b/public/assets/css/pages/home.css
@@ -1,3 +1,7 @@
+p {
+    color: black;
+}
+
 .gdlr-core-personnel-item .gdlr-core-personnel-list .gdlr-core-personnel-list-image img{
     object-fit: fill;
     height: 220px;
@@ -23,3 +27,4 @@
         color: #fff;
     }   
 }
+
