--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -219,7 +219,7 @@
                     <div class="gdlr-core-pbf-column gdlr-core-column-30"></div>
                     <div class="gdlr-core-pbf-column gdlr-core-column-30 gdlr-core-column-first" >
                         <div class="gdlr-core-pbf-column-content-margin gdlr-core-js " id="coffret-img" style="padding: 100px 100px 0px 0px;" data-sync-height="height-1">
-                            <div class="gdlr-core-pbf-background-wrap" style="">
+                            <div class="gdlr-core-pbf-background-wrap">
                                 {# <div class="gdlr-core-pbf-background gdlr-core-parallax gdlr-core-js"  data-parallax-speed="0.2"> #}
                                     <img src="{{asset('assets/utils/images/Image 5.png')}}" >
                                 {# </div> #}
@@ -229,7 +229,7 @@
                     </div>
                     <div class="gdlr-core-pbf-column gdlr-core-column-30">
                         <div class="gdlr-core-pbf-column-content-margin gdlr-core-js "  data-sync-height="height-1" data-sync-height-center>
-                            <div class="gdlr-core-pbf-background-wrap" style=""></div>
+                            <div class="gdlr-core-pbf-background-wrap"></div>
                             <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js  gdlr-core-sync-height-content" data-gdlr-animation="fadeInRight" data-gdlr-animation-duration="600ms" data-gdlr-animation-offset="0.8">
                                 <div class="gdlr-core-pbf-element">
                                     <div class="gdlr-core-column-service-item gdlr-core-item-pdb  gdlr-core-left-align gdlr-core-column-service-icon-left gdlr-core-no-caption gdlr-core-item-pdlr" >
@@ -238,7 +238,7 @@
                                             <div class="gdlr-core-column-service-title-wrap">
                                                 <h3 class="gdlr-core-column-service-title" style="font-size: 19px;font-weight: 600;letter-spacing: 0px;text-transform: none;">Des filières d’ingrédients régénératrices des habitats naturels</h3></div>
                                             <div class="gdlr-core-column-service-content">
-                                                <p>
+                                                <p class="paragraph-ico-section">
                                                     Nous plantons le Moringa, ingrédient phare de ta routine sélectionné pour ses hautes vertus cosmétiques, en Tanzanie et au Burkina Faso en alternative aux agricultures intensives dévastatrices des zones de vie des éléphants. Il permet ainsi la régénération des habitats naturels pour garantir leur survie.
                                                 </p>
                                             </div>
@@ -252,7 +252,7 @@
                                             <div class="gdlr-core-column-service-title-wrap">
                                                 <h3 class="gdlr-core-column-service-title" style="font-size: 19px;font-weight: 600;letter-spacing: 0px;text-transform: none;">Des éco-gardes formés contre le braconnage</h3></div>
                                             <div class="gdlr-core-column-service-content">
-                                                <p>Puisqu’hélas il le faut encore, ELEPHAS appuie la formation de patrouilles anti-braconnage entre la réserve de Nazinga et le Parc de Kaboré tambi au Burkina Faso.</p>
+                                                <p class="paragraph-ico-section">Puisqu’hélas il le faut encore, ELEPHAS appuie la formation de patrouilles anti-braconnage entre la réserve de Nazinga et le Parc de Kaboré tambi au Burkina Faso.</p>
                                             </div>
                                         </div>
                                     </div>
@@ -264,7 +264,7 @@
                                             <div class="gdlr-core-column-service-title-wrap">
                                                 <h3 class="gdlr-core-column-service-title" style="font-size: 19px;font-weight: 600;letter-spacing: 0px;text-transform: none;">Des écoliers locaux sensibilisés au rôle des éléphants</h3></div>
                                             <div class="gdlr-core-column-service-content">
-                                                <p>
+                                                <p class="paragraph-ico-section">
                                                     Connaitre les éléphants, mieux comprendre, c’est mieux les protéger. ELEPHAS organise des visites scolaires d’écoliers des villages dans la réserve et de l’éducation à l’environnement en classes pour que les générations futures s’impliquent dans leur protection.
                                                 </p>
                                             </div>
@@ -273,9 +273,15 @@
                                 </div>
                                 <div class="gdlr-core-pbf-element">
                                 <div class="gdlr-core-column-service-item gdlr-core-item-pdb  gdlr-core-left-align gdlr-core-column-service-icon-left gdlr-core-no-caption gdlr-core-item-pdlr" >
-                                    <div class="gdlr-core-column-service-media gdlr-core-media-image" ></div>
+                                    <!-- <div class="gdlr-core-column-service-media gdlr-core-media-image" ></div>
                                     <div class="gdlr-core-column-service-content-wrapper" style="padding-left: 7px;">
                                         <a class="gdlr-core-button  gdlr-core-button-solid gdlr-core-button-no-border my-bg-black text-center" href="{{path('app_checkout')}}" style="font-size: 12px;padding: 18px 50px 18px 50px;border-radius: 3px;-moz-border-radius: 3px;-webkit-border-radius: 3px; color: var(--color-orange);  width: 290px;"><span class="gdlr-core-content">COMMANDE TES SOINS HEROÏQUES !</span></a>
+                                    </div> -->
+                                    <div class="row">
+                                        <!-- <div class="col-12 col-md-2"></div> -->
+                                        <div class="col-12 text-center">
+                                           <a class="gdlr-core-button  gdlr-core-button-solid gdlr-core-button-no-border my-bg-black text-center" href="{{path('app_checkout')}}" style="font-size: 12px;padding: 18px 50px 18px 50px;border-radius: 3px;-moz-border-radius: 3px;-webkit-border-radius: 3px; color: var(--color-orange);  width: 290px;"><span class="gdlr-core-content">COMMANDE TES SOINS HEROÏQUES !</span></a>
+                                        </div>
                                     </div>
                                 </div>
                                 </div>
@@ -334,7 +340,83 @@
                 <div class="gdlr-core-pbf-wrapper-container clearfix gdlr-core-container">
                     <div class="gdlr-core-pbf-element">
                         <div class="gdlr-core-gallery-item gdlr-core-item-pdb clearfix  gdlr-core-gallery-item-style-grid">
-                            <div class="gdlr-core-gallery-item-holder gdlr-core-js-2 clearfix" data-layout="fitrows">
+                            <div class="row text-center">
+                                <div class="col-4 col-md-2">
+                                    <img src="{{asset('assets/utils/logo/Calque 4.png')}}"
+                                            role="button"
+                                            data-container="body"
+                                            data-toggle="popover"
+                                            tabindex="0"
+                                            data-trigger="focus"
+                                            data-placement="top"
+                                            data-content="La certification Cosmos Organic permet la commercialisation de produits cosmétiques biologiques ou naturels. Elle garantit un ensemble de procédés et de production respectueux de l’environnement et de la santé humaine, ainsi qu’un développement du concept de chimie verte. Ainsi, les produits créés ne contiennent pas d’ingrédients pétrochimiques, d’OGM et disposent d’un emballage recyclable. "
+                                            alt="" width="138" height="49" />
+                                </div>
+                                <div class="col-4 col-md-2">
+                                    <img src="{{asset('assets/utils/logo/Calque 5.png')}}"
+                                            role="button"
+                                            data-container="body"
+                                            data-toggle="popover"
+                                            tabindex="0"
+                                            data-trigger="focus"
+                                            data-placement="top"
+                                            data-content="la certification Wildlife Friendly est reconnue mondialement et est attribuée au développement et à la commercialisation de produits qui préservent les espèces sauvages menacées tout en contribuant à la vitalité économique des communautés rurales. Il peut regrouper les défenseurs de la nature, des entreprises, des artisans, des producteurs et des récoltants. Le label certifié Wildlife Friendly™ protège rigoureusement les espèces clés qui constituent une priorité en matière de conservation. Les entreprises Certified Wildlife Friendly™ protègent un large éventail d'espèces sauvages dans de multiples secteurs à travers le monde. Le programme comprend des critères distincts pour les produits certifiés Wildlife Friendly™ ainsi que pour le tourisme certifié Wildlife Friendly™."
+                                            alt="" width="141" height="45" />
+                                </div>
+                                <div class="col-4 col-md-2">
+                                    <img src="{{asset('assets/utils/logo/1ftp_Primary_Vertical_navy-01.webp')}}"
+                                        role="button"
+                                        data-container="body"
+                                        data-toggle="popover"
+                                        tabindex="0"
+                                        data-trigger="focus"
+                                        data-placement="top"
+                                        data-content="1% for the Planet a été fondé pour empêcher l'écoblanchiment, certifier les dons de bonne réputation et assurer la responsabilité. La certification 1% for the Planet est décernée aux entreprises et aux particuliers qui respectent cet engagement de haut niveau - donner 1% de leurs ventes annuelles ou de leur salaire à des causes environnementales."
+                                        alt="" width="141" height="45" />
+                                </div>
+                                <div class="col-4 col-md-2">
+                                    <img src="{{asset('assets/utils/logo/Calque 6.png')}}"
+                                        role="button"
+                                        data-container="body"
+                                        data-toggle="popover"
+                                        tabindex="0"
+                                        data-trigger="focus"
+                                        data-placement="top"
+                                        data-content="la certification Palm Oil Free est délivrée pour approuver la commercialisation de produits sans huile de palme. "
+                                        alt="" width="132" height="46" />
+                                </div>
+                                <div class="col-4 col-md-2">
+                                    <img src="{{asset('assets/utils/logo/Calque 7.png')}}"
+                                        role="button"
+                                        data-container="body"
+                                        data-toggle="popover"
+                                        tabindex="0"
+                                        data-trigger="focus"
+                                        data-placement="top"
+                                        data-content="Conscious Fashion and Lifestyle Network est une plateforme en ligne hébergée par les Nations Unies (ONU) pour les acteurs du secteur, les médias, les gouvernements et les entités du système des Nations Unies. Le réseau met en avant et permet des collaborations qui accélèrent la mise en œuvre des objectifs de développement durable. Compte tenu de l'impact considérable du secteur de la mode et du style de vie sur les sociétés et l'environnement, son principal objectif est de mobiliser l'expertise, l'innovation, la technologie et les ressources en vue d'une reprise durable et inclusive du COVID-19, avec les objectifs de développement durable comme cadre directeur."
+                                        alt="" width="148" height="44" />
+                                </div>
+                                <div class="col-4 col-md-2">
+                                    <img src="{{asset('assets/utils/logo/Calque 8.png')}}"
+                                        role="button"
+                                        data-container="body"
+                                        data-toggle="popover"
+                                        tabindex="0"
+                                        data-trigger="focus"
+                                        data-placement="top"
+                                        data-content='La première chose que vous devez savoir est que les termes "végétalien" (vegan) et "sans cruauté" (cruelty free) ne sont pas identiques. Vegan signifie qu&rsquo;un produit ne contient aucun ingrédient d&rsquo;origine animale. Cruelty-free signifie que le produit n&rsquo;a pas été testé sur des animaux pendant son développement. Si, techniquement, cela signifie qu&rsquo;un produit végétalien peut avoir été testé sur des animaux et vice versa, dans la pratique, la plupart des certifications végétaliennes exigent également que les produits soient sans cruauté, et de nombreux produits étiquetés "cruelty-free" sont également végétaliens, ce qui est le cas pour Elephas.'
+                                        alt="" width="151" height="33" />
+                                </div>
+                            </div>
+
+
+
+
+
+
+
+
+                            <!-- <div class="gdlr-core-gallery-item-holder gdlr-core-js-2 clearfix" data-layout="fitrows">
                                 <div class="gdlr-core-item-list gdlr-core-gallery-column  gdlr-core-column-12 gdlr-core-column-first gdlr-core-item-pdlr gdlr-core-item-mgb">
                                     <div class="gdlr-core-gallery-list gdlr-core-media-image">
                                         <img src="{{asset('assets/utils/logo/Calque 4.png')}}"
@@ -410,7 +492,7 @@
                                              data-content='La première chose que vous devez savoir est que les termes "végétalien" (vegan) et "sans cruauté" (cruelty free) ne sont pas identiques. Vegan signifie qu&rsquo;un produit ne contient aucun ingrédient d&rsquo;origine animale. Cruelty-free signifie que le produit n&rsquo;a pas été testé sur des animaux pendant son développement. Si, techniquement, cela signifie qu&rsquo;un produit végétalien peut avoir été testé sur des animaux et vice versa, dans la pratique, la plupart des certifications végétaliennes exigent également que les produits soient sans cruauté, et de nombreux produits étiquetés "cruelty-free" sont également végétaliens, ce qui est le cas pour Elephas.'
                                              alt="" width="151" height="33" /></div>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                     <div class="gdlr-core-pbf-element">
@@ -433,7 +515,7 @@
                                 <div class="gdlr-core-pbf-element text-center">
                                     <h3>Les mots de notre fondatrice, Anne BEHRA</h3>
                                     <div class="gdlr-core-testimonial-content gdlr-core-info-font gdlr-core-skin-content" style="font-size: 21px;">
-                                    <p>“ Avec ELEPHAS nous poussons le curseur de l’éco-responsabilité à son paroxysme en créant un nouveau modèle de marque actif sur toute sa chaîne de valeurs, pour vous offrir la plus consciente et la plus active des beautés, avec un réel impact pour la protection d’une espèce menacée. C’est possible, il est temps qu’on s’y mette tous !</p>
+                                    <p>“ Avec ELEPHAS nous poussons le curseur de l’éco-responsabilité à son paroxysme en créant un nouveau modèle de marque actif sur toute sa chaîne de valeurs, pour vous offrir la plus consciente et la plus active des beautés, avec un réel impact pour la protection d’une espèce menacée. C’est possible, il est temps qu’on s’y mette tous ! ”</p>
                                     </div>
                                     </div>
                             </div>
