--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -43,7 +43,7 @@
                                 <div class="gdlr-core-pbf-element">
                                     <div class="gdlr-core-text-box-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align" style="padding-bottom: 15px;">
                                         <div class="gdlr-core-text-box-item-content" style="font-size: 17px;">
-                                            <p> ELEPHAS Paris® signe pour vous un trio de soins experts et rares, réunis dans une routine bio minimaliste pour rayonner de beauté et d’engagement au quotidien.</p>
+                                            <p class="text-white"> ELEPHAS Paris® signe pour vous un trio de soins experts et rares, réunis dans une routine bio minimaliste pour rayonner de beauté et d’engagement au quotidien.</p>
                                         </div>
                                     </div>
                                 </div>
