--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -147,7 +147,7 @@
                                         <a href="#"><img width="200" src="{{asset('assets/utils/images/Calque -3.png')}}"   alt=""></a>
                                     </div>
                                     <div class="gdlr-core-personnel-list-content-wrap">
-                                        <h3 class="gdlr-core-personnel-list-title" style="font-weight: 800;"><a href="#">3.	3. DEMAQUILLER ET CHOUCHOUTER </a></h3>
+                                        <h3 class="gdlr-core-personnel-list-title" style="font-weight: 800;"><a href="#">3. DEMAQUILLER ET CHOUCHOUTER </a></h3>
                                         <p class="font-weight-bold">Huile Botanique Démaquillante </p>
                                         <div class="gdlr-core-personnel-list-position gdlr-core-info-font gdlr-core-skin-caption my-font-regular" style="font-size: 15px;font-style: normal;">
                                             Garantit un démaquillage doux et efficace, tout en apportant un soin botanique grâce à sa sélection d’huiles de Coco, de Jojoba et de Moringa.
@@ -202,7 +202,7 @@
                                     <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-left-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr" style="padding-bottom: 25px;">
                                         <div class="gdlr-core-title-item-title-wrap ">
                                             <h3 class="gdlr-core-title-item-title gdlr-core-skin-title " style="font-size: 25px;font-weight: 100;letter-spacing: 0px;text-transform: uppercase;">TA BEAUTE, TON ACTION POUR LA SURVIE D’UNE ESPECE MENACEE !<span class="gdlr-core-title-item-title-divider gdlr-core-skin-divider"></span></h3>
-                                            <p>Tes achats participent à nos actions concrètes pour la conservation des éléphants :</p>
+                                            <p class="mt-3">Tes achats participent à nos actions concrètes pour la conservation des éléphants !</p>
                                         </div>
                                     </div>
                                 </div>
@@ -495,8 +495,8 @@
                             </div> -->
                         </div>
                     </div>
-                    <div class="gdlr-core-pbf-element">
-                        <div class="gdlr-core-button-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-center-align"><a class="gdlr-core-button  gdlr-core-button-solid gdlr-core-button-no-border my-bg-black" href="{{path('app_checkout')}}" style="font-size: 12px;padding: 18px 50px 18px 50px;border-radius: 3px;-moz-border-radius: 3px;-webkit-border-radius: 3px; color: var(--color-orange);"><span class="gdlr-core-content">Commande ta beauté consciente </span></a></div>
+                    <div class="gdlr-core-pbf-element mt-4">
+                        <div class="gdlr-core-button-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-center-align"><a class="gdlr-core-button  gdlr-core-button-solid gdlr-core-button-no-border my-bg-black" href="{{path('app_checkout')}}" style="font-size: 12px;padding: 18px 50px 18px 50px;border-radius: 3px;-moz-border-radius: 3px;-webkit-border-radius: 3px; color: var(--color-orange);"><span class="gdlr-core-content">Commande ta beauté consciente ! </span></a></div>
                     </div>
                 </div>
             </div>
