--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -3,7 +3,7 @@
     <div class="kleanity-header-container  kleanity-header-full" style="width: 50%;">
         <div class="kleanity-header-container-inner clearfix py-3">
             <div class="elephas-logo">
-                <a href="https://elephas.fr"  class="d-flex align-items-center justify-content-center"><img src="{{asset('assets/utils/images/logo.png')}}" alt="Elephas logo" ></a>
+                <a href="/"  class="d-flex align-items-center justify-content-center"><img src="{{asset('assets/utils/images/logo.png')}}" alt="Elephas logo" ></a>
             </div>
 
         </div>
