--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -23,7 +23,7 @@
             </div>
             <div class="gdlr-core-pbf-wrapper-content gdlr-core-js " style="z-index: 2">
                 <div class="gdlr-core-pbf-wrapper-container clearfix gdlr-core-container">
-                    <div class="gdlr-core-pbf-column gdlr-core-column-30 gdlr-core-column-first">
+                    <div class="gdlr-core-pbf-column gdlr-core-column-30 gdlr-core-column-first gdlr-core-ipad-column-first">
                         <div class="gdlr-core-pbf-column-content-margin gdlr-core-js ">
                             <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js ">
                                 <div class="gdlr-core-pbf-element">
@@ -36,7 +36,9 @@
                                 <div class="gdlr-core-pbf-element">
                                     <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-left-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr" style="padding-bottom: 15px;">
                                         <div class="gdlr-core-title-item-title-wrap ">
-                                            <h3 class="gdlr-core-title-item-title gdlr-core-skin-title " style="font-size: 50px;font-weight: 300;letter-spacing: 0px;text-transform: uppercase; color: #fff;">OFFRE UN COFFRET RARE : UNE BEAUTE EXPERTE & ENGAGEE POUR LA VIE<br> SAUVAGE
+                                            <h3 class="gdlr-core-title-item-title gdlr-core-skin-title "
+                                                style="font-size: 50px;font-weight: 300;letter-spacing: 0px;text-transform: uppercase; color: #fff;">
+                                                OFFRE UN COFFRET RARE : UNE BEAUTE EXPERTE & ENGAGEE POUR LA VIE<br> SAUVAGE
                                                 <span class="gdlr-core-title-item-title-divider gdlr-core-skin-divider"></span></h3></div>
                                     </div>
                                 </div>
@@ -53,10 +55,10 @@
                             </div>
                         </div>
                     </div>
-                    <div class="gdlr-core-pbf-column gdlr-core-column-30">
+                    <div class="gdlr-core-pbf-column gdlr-core-column-30 gdlr-core-ipad-column">
                         <div class="gdlr-core-pbf-column-content-margin gdlr-core-js ">
                             <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js ">
-                                <div class="d-flex align-items-end justify-content-around">
+                                <div class="d-flex align-items-end justify-content-around" >
                                     <img src="{{asset('assets/utils/images/Calque -2.png')}}" />
                                     <img src="{{asset('assets/utils/images/Calque -1.png')}}" class="mx-md-3" />
                                     <img src="{{asset('assets/utils/images/Calque -3.png')}}" />
