--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -135,7 +135,7 @@
                                         <a href="#"><img width="200" src="{{asset('assets/utils/images/Calque -1.png')}}"   alt=""></a>
                                     </div>
                                     <div class="gdlr-core-personnel-list-content-wrap">
-                                        <h3 class="gdlr-core-personnel-list-title" style="font-weight: 800;"><a href="#">2.PROTEGER ET REGENERER</a></h3>
+                                        <h3 class="gdlr-core-personnel-list-title" style="font-weight: 800;"><a href="#">2.PROTÉGER ET REGÉNERER</a></h3>
                                         <p class="font-weight-bold">Crème de jour hydratante Anti-pollution </p>
                                         <div class="gdlr-core-personnel-list-position gdlr-core-info-font gdlr-core-skin-caption my-font-regular" style="font-size: 15px;font-style: normal;">
                                             Crème visage au beurre de Karité, acide hyaluronique, huile précieuse de Baobab et extraits de Moringa pour protéger, détoxifier et régénérer la peau au quotidien.
@@ -203,7 +203,7 @@
                                 <div class="gdlr-core-pbf-element">
                                     <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-left-align gdlr-core-title-item-caption-top gdlr-core-item-pdlr" style="padding-bottom: 25px;">
                                         <div class="gdlr-core-title-item-title-wrap ">
-                                            <h3 class="gdlr-core-title-item-title gdlr-core-skin-title " style="font-size: 25px;font-weight: 100;letter-spacing: 0px;text-transform: uppercase;">TA BEAUTE, TON ACTION POUR LA SURVIE D’UNE ESPECE MENACEE !<span class="gdlr-core-title-item-title-divider gdlr-core-skin-divider"></span></h3>
+                                            <h3 class="gdlr-core-title-item-title gdlr-core-skin-title " style="font-size: 25px;font-weight: 100;letter-spacing: 0px;text-transform: uppercase;">TA BEAUTE, TON ACTION POUR LA SURVIE D’UNE ESPÈCE MENACÉE !<span class="gdlr-core-title-item-title-divider gdlr-core-skin-divider"></span></h3>
                                             <p class="mt-4">Tes achats participent à nos actions concrètes pour la conservation des éléphants !</p>
                                         </div>
                                     </div>
