--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -1,7 +1,7 @@
 {% extends "base.html.twig" %}
 
 {% block title %}
-    Accueil
+    ELEPHAS Paris®️, Coffret cosmétiques bio et héroïque pour la vie sauvage.
 {% endblock %}
 
 {% block stylesheets %}
