--- a/public/assets/utils/css/fonts.css
+++ b/public/assets/utils/css/fonts.css
@@ -18,3 +18,6 @@
 * {
     font-family: "Raleway Regular" !important;
 }
+.fa-brands, .fab{
+    font-family: "Font Awesome 6 Brands" !important;
+}
