--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -57,11 +57,16 @@
                     </div>
                     <div class="gdlr-core-pbf-column gdlr-core-column-30 gdlr-core-ipad-column">
                         <div class="gdlr-core-pbf-column-content-margin gdlr-core-js ">
-                            <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js ">
+                            <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js d-none d-md-block">
                                 <div class="d-flex align-items-end justify-content-around" >
                                     <img src="{{asset('assets/utils/images/Calque -2.png')}}" />
                                     <img src="{{asset('assets/utils/images/Calque -1.png')}}" class="mx-md-3" />
                                     <img src="{{asset('assets/utils/images/Calque -3.png')}}" />
+                                </div>
+                            </div>
+                            <div class="gdlr-core-pbf-column-content clearfix gdlr-core-js d-md-none">
+                                <div>
+                                    <img src="{{asset('assets/utils/images/moringa-rmbg-rogner.png')}}" />
                                 </div>
                             </div>
                         </div>
@@ -114,7 +119,7 @@
                             <div class="gdlr-core-personnel-list-column  gdlr-core-column-20 gdlr-core-column-first gdlr-core-item-pdlr">
                                 <div class="gdlr-core-personnel-list clearfix">
                                     <div class="gdlr-core-personnel-list-image gdlr-core-media-image  gdlr-core-zoom-on-hover">
-                                        <a href="#"><img width="200" src="{{asset('assets/utils/images/Calque -2.png')}}"   alt=""></a>
+                                        <a href="#"><img src="{{asset('assets/utils/images/lotionBota.jpg')}}"   alt=""></a>
                                     </div>
                                     <div class="gdlr-core-personnel-list-content-wrap">
                                         <h3 class="gdlr-core-personnel-list-title" style="font-weight: 800;"><a href="#">1.PURIFIER
@@ -132,7 +137,7 @@
                             <div class="gdlr-core-personnel-list-column  gdlr-core-column-20 gdlr-core-item-pdlr">
                                 <div class="gdlr-core-personnel-list clearfix">
                                     <div class="gdlr-core-personnel-list-image gdlr-core-media-image  gdlr-core-zoom-on-hover">
-                                        <a href="#"><img width="200" src="{{asset('assets/utils/images/Calque -1.png')}}"   alt=""></a>
+                                        <a href="#"><img src="{{asset('assets/utils/images/cremeHydra.jpg')}}"   alt=""></a>
                                     </div>
                                     <div class="gdlr-core-personnel-list-content-wrap">
                                         <h3 class="gdlr-core-personnel-list-title" style="font-weight: 800;"><a href="#">2.PROTÉGER ET RÉGÉNÉRER</a></h3>
@@ -146,7 +151,7 @@
                             <div class="gdlr-core-personnel-list-column  gdlr-core-column-20 gdlr-core-item-pdlr">
                                 <div class="gdlr-core-personnel-list clearfix">
                                     <div class="gdlr-core-personnel-list-image gdlr-core-media-image  gdlr-core-zoom-on-hover">
-                                        <a href="#"><img width="200" src="{{asset('assets/utils/images/Calque -3.png')}}"   alt=""></a>
+                                        <a href="#"><img src="{{asset('assets/utils/images/huileBota.jpg')}}"   alt=""></a>
                                     </div>
                                     <div class="gdlr-core-personnel-list-content-wrap">
                                         <h3 class="gdlr-core-personnel-list-title" style="font-weight: 800;"><a href="#">3. DÉMAQUILLER ET CHOUCHOUTER </a></h3>
