Design demande client

--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -50,7 +50,7 @@
                                     </div>
                                 </div>
                                 <div class="gdlr-core-pbf-element">
-                                    <div class="gdlr-core-button-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align"><a class="gdlr-core-button  gdlr-core-button-solid gdlr-core-button-no-border my-bg-orange" href="{{path('app_checkout')}}" style="margin-bottom:26px;font-size: 12px;padding: 18px 33px 18px 33px;border-radius: 3px;-moz-border-radius: 3px;-webkit-border-radius: 3px; color: var(--color-black);"><span class="gdlr-core-content">Commander</span></a></div>
+                                    <div class="gdlr-core-button-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align"><a class="gdlr-core-button  gdlr-core-button-solid gdlr-core-button-no-border my-bg-orange" href="{{path('app_checkout')}}" style="margin-bottom:26px;padding: 18px 33px 18px 33px;border-radius: 3px;-moz-border-radius: 3px;-webkit-border-radius: 3px; color: var(--color-black);"><span class="gdlr-core-content">Commander</span></a></div>
                                 </div>
                             </div>
                         </div>
@@ -190,7 +190,7 @@
                                     </div>
                                 </div>
                                 <div class="gdlr-core-pbf-element">
-                                    <div class="gdlr-core-button-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-center-align"><a class="gdlr-core-button  gdlr-core-button-solid gdlr-core-button-no-border my-bg-black" href="{{path('app_checkout')}}" style="font-size: 12px;padding: 18px 33px 18px 33px;border-radius: 3px;-moz-border-radius: 3px;-webkit-border-radius: 3px; color: var(--color-orange);"><span class="gdlr-core-content">Achetez le coffret à {{ coffret.prix }} €</span></a></div>
+                                    <div class="gdlr-core-button-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-center-align"><a class="gdlr-core-button  gdlr-core-button-solid gdlr-core-button-no-border my-bg-black" href="{{path('app_checkout')}}" style="padding: 18px 33px 18px 33px;border-radius: 3px;-moz-border-radius: 3px;-webkit-border-radius: 3px; color: var(--color-orange);"><span class="gdlr-core-content">Achetez le coffret à {{ coffret.prix }} €</span></a></div>
                                 </div>
                             </div>
                         </div>
@@ -282,12 +282,12 @@
                                 <div class="gdlr-core-column-service-item gdlr-core-item-pdb  gdlr-core-left-align gdlr-core-column-service-icon-left gdlr-core-no-caption gdlr-core-item-pdlr" >
                                     <!-- <div class="gdlr-core-column-service-media gdlr-core-media-image" ></div>
                                     <div class="gdlr-core-column-service-content-wrapper" style="padding-left: 7px;">
-                                        <a class="gdlr-core-button  gdlr-core-button-solid gdlr-core-button-no-border my-bg-black text-center" href="{{path('app_checkout')}}" style="font-size: 12px;padding: 18px 50px 18px 50px;border-radius: 3px;-moz-border-radius: 3px;-webkit-border-radius: 3px; color: var(--color-orange);  width: 290px;"><span class="gdlr-core-content">COMMANDE TES SOINS HEROÏQUES !</span></a>
+                                        <a class="gdlr-core-button  gdlr-core-button-solid gdlr-core-button-no-border my-bg-black text-center" href="{{path('app_checkout')}}" style="padding: 18px 50px 18px 50px;border-radius: 3px;-moz-border-radius: 3px;-webkit-border-radius: 3px; color: var(--color-orange);  width: 290px;"><span class="gdlr-core-content">COMMANDE TES SOINS HEROÏQUES !</span></a>
                                     </div> -->
                                     <div class="row">
                                         <!-- <div class="col-12 col-md-2"></div> -->
                                         <div class="col-12 text-center">
-                                           <a class="gdlr-core-button  gdlr-core-button-solid gdlr-core-button-no-border my-bg-black text-center" href="{{path('app_checkout')}}" style="font-size: 12px;padding: 18px 50px 18px 50px;border-radius: 3px;-moz-border-radius: 3px;-webkit-border-radius: 3px; color: var(--color-orange);  width: 290px;"><span class="gdlr-core-content">COMMANDE TES SOINS HEROÏQUES !</span></a>
+                                           <a class="gdlr-core-button  gdlr-core-button-solid gdlr-core-button-no-border my-bg-black text-center" href="{{path('app_checkout')}}" style="padding: 18px 50px 18px 50px;border-radius: 3px;-moz-border-radius: 3px;-webkit-border-radius: 3px; color: var(--color-orange);  width: 290px;"><span class="gdlr-core-content">COMMANDE TES SOINS HEROÏQUES !</span></a>
                                         </div>
                                     </div>
                                 </div>
@@ -349,17 +349,6 @@
                         <div class="gdlr-core-gallery-item gdlr-core-item-pdb clearfix  gdlr-core-gallery-item-style-grid">
                             <div class="row text-center">
                                 <div class="col-4 col-md-2">
-                                    <img src="{{asset('assets/utils/logo/Calque 4.png')}}"
-                                            role="button"
-                                            data-container="body"
-                                            data-toggle="popover"
-                                            tabindex="0"
-                                            data-trigger="focus"
-                                            data-placement="top"
-                                            data-content="La certification Cosmos Organic permet la commercialisation de produits cosmétiques biologiques ou naturels. Elle garantit un ensemble de procédés et de production respectueux de l’environnement et de la santé humaine, ainsi qu’un développement du concept de chimie verte. Ainsi, les produits créés ne contiennent pas d’ingrédients pétrochimiques, d’OGM et disposent d’un emballage recyclable. "
-                                            alt="" width="138" height="49" />
-                                </div>
-                                <div class="col-4 col-md-2">
                                     <img src="{{asset('assets/utils/logo/Calque 5.png')}}"
                                             role="button"
                                             data-container="body"
@@ -371,7 +360,7 @@
                                             alt="" width="141" height="45" />
                                 </div>
                                 <div class="col-4 col-md-2">
-                                    <img src="{{asset('assets/utils/logo/1ftp_Primary_Vertical_navy-01.webp')}}"
+                                    <img src="{{asset('assets/utils/logo/1percent.png')}}"
                                         role="button"
                                         data-container="body"
                                         data-toggle="popover"
@@ -380,17 +369,6 @@
                                         data-placement="top"
                                         data-content="1% for the Planet a été fondé pour empêcher l'écoblanchiment, certifier les dons de bonne réputation et assurer la responsabilité. La certification 1% for the Planet est décernée aux entreprises et aux particuliers qui respectent cet engagement de haut niveau - donner 1% de leurs ventes annuelles ou de leur salaire à des causes environnementales."
                                         alt="" width="141" height="45" />
-                                </div>
-                                <div class="col-4 col-md-2">
-                                    <img src="{{asset('assets/utils/logo/Calque 6.png')}}"
-                                        role="button"
-                                        data-container="body"
-                                        data-toggle="popover"
-                                        tabindex="0"
-                                        data-trigger="focus"
-                                        data-placement="top"
-                                        data-content="la certification Palm Oil Free est délivrée pour approuver la commercialisation de produits sans huile de palme. "
-                                        alt="" width="132" height="46" />
                                 </div>
                                 <div class="col-4 col-md-2">
                                     <img src="{{asset('assets/utils/logo/Calque 7.png')}}"
@@ -404,6 +382,17 @@
                                         alt="" width="148" height="44" />
                                 </div>
                                 <div class="col-4 col-md-2">
+                                    <img src="{{asset('assets/utils/logo/Calque 6.png')}}"
+                                        role="button"
+                                        data-container="body"
+                                        data-toggle="popover"
+                                        tabindex="0"
+                                        data-trigger="focus"
+                                        data-placement="top"
+                                        data-content="la certification Palm Oil Free est délivrée pour approuver la commercialisation de produits sans huile de palme. "
+                                        alt="" width="132" height="46" />
+                                </div>
+                                <div class="col-4 col-md-2">
                                     <img src="{{asset('assets/utils/logo/Calque 8.png')}}"
                                         role="button"
                                         data-container="body"
@@ -413,6 +402,17 @@
                                         data-placement="top"
                                         data-content='La première chose que vous devez savoir est que les termes "végétalien" (vegan) et "sans cruauté" (cruelty free) ne sont pas identiques. Vegan signifie qu&rsquo;un produit ne contient aucun ingrédient d&rsquo;origine animale. Cruelty-free signifie que le produit n&rsquo;a pas été testé sur des animaux pendant son développement. Si, techniquement, cela signifie qu&rsquo;un produit végétalien peut avoir été testé sur des animaux et vice versa, dans la pratique, la plupart des certifications végétaliennes exigent également que les produits soient sans cruauté, et de nombreux produits étiquetés "cruelty-free" sont également végétaliens, ce qui est le cas pour Elephas.'
                                         alt="" width="151" height="33" />
+                                </div>
+                                <div class="col-4 col-md-2">
+                                    <img src="{{asset('assets/utils/logo/Calque 4.png')}}"
+                                            role="button"
+                                            data-container="body"
+                                            data-toggle="popover"
+                                            tabindex="0"
+                                            data-trigger="focus"
+                                            data-placement="top"
+                                            data-content="La certification Cosmos Organic permet la commercialisation de produits cosmétiques biologiques ou naturels. Elle garantit un ensemble de procédés et de production respectueux de l’environnement et de la santé humaine, ainsi qu’un développement du concept de chimie verte. Ainsi, les produits créés ne contiennent pas d’ingrédients pétrochimiques, d’OGM et disposent d’un emballage recyclable. "
+                                            alt="" width="138" height="49" />
                                 </div>
                             </div>
 
@@ -503,7 +503,7 @@
                         </div>
                     </div>
                     <div class="gdlr-core-pbf-element mt-4">
-                        <div class="gdlr-core-button-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-center-align"><a class="gdlr-core-button  gdlr-core-button-solid gdlr-core-button-no-border my-bg-black" href="{{path('app_checkout')}}" style="font-size: 12px;padding: 18px 50px 18px 50px;border-radius: 3px;-moz-border-radius: 3px;-webkit-border-radius: 3px; color: var(--color-orange);"><span class="gdlr-core-content">Commande ta beauté consciente ! </span></a></div>
+                        <div class="gdlr-core-button-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-center-align"><a class="gdlr-core-button  gdlr-core-button-solid gdlr-core-button-no-border my-bg-black" href="{{path('app_checkout')}}" style="padding: 18px 50px 18px 50px;border-radius: 3px;-moz-border-radius: 3px;-webkit-border-radius: 3px; color: var(--color-orange);"><span class="gdlr-core-content">Commande ta beauté consciente ! </span></a></div>
                     </div>
                 </div>
             </div>
@@ -552,7 +552,7 @@
                                     </div>
                                 </div>
                                 <div class="gdlr-core-pbf-element">
-                                    <div class="gdlr-core-button-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-center-align"><a class="gdlr-core-button  gdlr-core-button-solid gdlr-core-button-no-border my-bg-black" href="{{path('app_checkout')}}" style="font-size: 12px;padding: 18px 33px 18px 33px;border-radius: 3px;-moz-border-radius: 3px;-webkit-border-radius: 3px; color: var(--color-orange);"><span class="gdlr-core-content">Commander</span></a></div>
+                                    <div class="gdlr-core-button-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-center-align"><a class="gdlr-core-button  gdlr-core-button-solid gdlr-core-button-no-border my-bg-black" href="{{path('app_checkout')}}" style="padding: 18px 33px 18px 33px;border-radius: 3px;-moz-border-radius: 3px;-webkit-border-radius: 3px; color: var(--color-orange);"><span class="gdlr-core-content">Commander</span></a></div>
                                 </div>
                             </div>
                         </div>
