--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -26,14 +26,14 @@
             <link rel='stylesheet' href="{{ asset('assets/kleanity/css/google-fonts.css') }}" type='text/css' media='all' />
             <link rel='stylesheet' href="{{ asset('assets/kleanity/css/settings.css') }}" type='text/css' media='all' />
             <link rel='stylesheet' href="{{ asset('assets/kleanity/css/style-core.css') }}" type='text/css' media='all' />
-            <link rel='stylesheet' href="{{ asset('assets/kleanity/css/kleanity-style-custom.css') }}" type='text/css' media='all' />
-            <link rel='stylesheet' href="{{ asset('assets/kleanity/css/combine.css') }}" type='text/css' media='all' />
+            <link rel='stylesheet' href="{{ asset('assets/kleanity/css/kleanity-style-custom.css') ~ '?2022_12_12_14_06' }}" type='text/css' media='all' />
+            <link rel='stylesheet' href="{{ asset('assets/kleanity/css/combine.css') ~ '?2022_12_12_14_06' }}" type='text/css' media='all' />
             <link rel='stylesheet' href="{{ asset('assets/kleanity/css/page-builder.css') }}" type='text/css' media='all' />
 
             <link rel='stylesheet' href="{{ asset('assets/kleanity/css/font-awesome.css') }}" type='text/css' media='all' />
             <link rel='stylesheet' href="{{ asset('assets/utils/bootstrap/css/bootstrap.min.css') }}" type='text/css' media='all' />
 
-            <link rel='stylesheet' href="{{ asset('assets/utils/css/fonts.css') }}" type='text/css' media='all' />
+            <link rel='stylesheet' href="{{ asset('assets/utils/css/fonts.css') ~ '?2022_12_12_14_06' }}" type='text/css' media='all' />
             <link rel='stylesheet' href="{{ asset('assets/utils/css/colors.css') }}" type='text/css' media='all' />
             <link rel='stylesheet' href="{{ asset('assets/utils/css/main.css') }}" type='text/css' media='all' />
 
