--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -6,7 +6,7 @@
 
 {% block stylesheets %}
     {{ parent() }}
-    <link rel='stylesheet' href="{{ asset('assets/css/pages/home.css') }}" />
+    <link rel='stylesheet' href="{{ asset('assets/css/pages/home.css') ~ '?2022_12_12_14_06' }}" />
 
 {% endblock %}
 
