Cache colors.css

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -34,7 +34,7 @@
             <link rel='stylesheet' href="{{ asset('assets/utils/bootstrap/css/bootstrap.min.css') }}" type='text/css' media='all' />
 
             <link rel='stylesheet' href="{{ asset('assets/utils/css/fonts.css') ~ '?2022_12_12_14_06' }}" type='text/css' media='all' />
-            <link rel='stylesheet' href="{{ asset('assets/utils/css/colors.css') }}" type='text/css' media='all' />
+            <link rel='stylesheet' href="{{ asset('assets/utils/css/colors.css') ~ '?2022_12_12_14_06'  }}" type='text/css' media='all' />
             <link rel='stylesheet' href="{{ asset('assets/utils/css/main.css') }}" type='text/css' media='all' />
 
         {% endblock %}
