--- a/templates/home/checkout.html.twig
+++ b/templates/home/checkout.html.twig
@@ -289,7 +289,7 @@
                                 <div class="gdlr-core-pbf-element" style="margin-top: 50px;">
                                     <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-left-align gdlr-core-title-item-caption-bottom gdlr-core-item-pdlr" style="padding-bottom: 15px;">
                                         <div class="gdlr-core-title-item-title-wrap ">
-                                            <h3 class="gdlr-core-title-item-title gdlr-core-skin-title my-font-regular" style="font-size: 28px;letter-spacing: 0px;text-transform: none;">Paiment<span class="gdlr-core-title-item-title-divider gdlr-core-skin-divider"></span></h3>
+                                            <h3 class="gdlr-core-title-item-title gdlr-core-skin-title my-font-regular" style="font-size: 28px;letter-spacing: 0px;text-transform: none;">Paiement<span class="gdlr-core-title-item-title-divider gdlr-core-skin-divider"></span></h3>
                                         </div>
                                     </div>
                                 </div>
